<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>es.anescdev</groupId>
    <artifactId>velox</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
    </properties>
    <profiles>
        <!-- WINDOWS PROFILE -->
        <profile>
            <id>build-on-windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <jpackage.type>MSI</jpackage.type>
                <jar.output.folder>win-out</jar.output.folder>
                <icon.path>win-target/classes/img/icons/icon.ico</icon.path>
            </properties>
            <build>
                <!-- Changes the default 'target' folder name to 'win-target' -->
                <directory>${project.basedir}/win-target</directory>
            </build>
        </profile>

        <!-- LINUX PROFILE -->
        <profile>
            <id>build-on-linux</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <build>
                <!-- Changes the default 'target' folder name to 'linux-target' -->
                <directory>${project.basedir}/linux-target</directory>
            </build>
            <properties>
                <jar.output.folder>linux-out</jar.output.folder>
                <jpackage.type>DEB</jpackage.type>
                <icon.path>linux-target/classes/img/icons/icon_256.png</icon.path>
            </properties>
        </profile>
    </profiles>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>25.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>25.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-unicons-pack</artifactId>
            <version>12.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.codejargon.feather</groupId>
            <artifactId>feather</artifactId>
            <version>1.0</version>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.53.2.0</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>6.1.0</version>
            <scope>test</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.junit.platform/junit-platform-suite -->
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite</artifactId>
            <version>6.1.0</version>
            <scope>test</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/com.j256.ormlite/ormlite-jdbc -->
        <dependency>
            <groupId>com.j256.ormlite</groupId>
            <artifactId>ormlite-jdbc</artifactId>
            <version>6.1</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.46</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.3</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/com.github.librepdf/openpdf-renderer -->
        <dependency>
            <groupId>com.github.librepdf</groupId>
            <artifactId>openpdf-renderer</artifactId>
            <version>3.0.5</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/com.github.librepdf/openpdf -->
        <dependency>
            <groupId>com.github.librepdf</groupId>
            <artifactId>openpdf</artifactId>
            <version>3.0.5</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>25</version>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>i18n/**/*.properties</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>i18n/**/*.properties</include>
                </includes>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <!-- Source:
                https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.6</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- Resources plugin maven-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <escapeString>\</escapeString>
                    <propertiesEnconding>UTF-8</propertiesEnconding>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>ttf</nonFilteredFileExtension>
                        <nonFilteredFileExtension>css</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
            <!-- Compiler plugin maven-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <!-- Esto permite al plugin de maven-compiler usar lombok 
                     (necesario para los tests al usar las entidades que usan sus anotaciones-->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.46</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <!-- Clean plugin maven-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <!-- Genera un solo JAR ejecutable reemplazando al original -->
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <transformers>
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <!-- ¡IMPORTANTE! Apunta a tu clase Launcher, NO a la de JavaFX -->
                                    <mainClass>es.anescdev.velox.Main</mainClass>
                                </transformer>
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>es.anescdev.velox.app.App</mainClass>
                    <commandlineArgs>--app-dir=.tmp</commandlineArgs>
                    <options>
                        <option>--enable-native-access=javafx.graphics</option>
                        <option>--enable-native-access=ALL-UNNAMED</option>
                        <option>--sun-misc-unsafe-memory-access=allow</option>
                    </options>
                </configuration>
                <executions>
                    <execution>
                        <!-- Configuration for debugging -->
                        <id>debug</id>
                        <configuration>
                            <commandlineArgs>--app-dir=.tmp</commandlineArgs>
                            <options>
                                <option>
                                    -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8282</option>
                                <option>--enable-native-access=javafx.graphics</option>
                                <option>--enable-native-access=ALL-UNNAMED</option>
                            </options>
                            <mainClass>es.anescdev.velox.app.App</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.8.0</version> <!-- Ensure this matches the version you are using -->
                <executions>
                    <execution>
                        <id>jpackage</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jpackage</goal>
                        </goals>
                        <configuration>
                            <icon>${icon.path}</icon>
                            <!-- 1. The Clean Folder containing ONLY your isolated JARs -->
                            <input>${project.build.directory}/${jar.output.folder}</input>
                            <mainJar>${project.build.finalName}.jar</mainJar>
                            <mainClass>es.anescdev.velox.Main</mainClass>

                            <!-- 2. Basic Metadata -->
                            <name>Velox</name>
                            <vendor>AnesCDev</vendor>
                            <appVersion>1.0.0</appVersion>
                            <copyright>Copyright 2026 AnesCDev</copyright>
                            <description>Desktop software for tracking employee work hours. Lightweight, focused, and distraction-free.</description>

                            <!-- 3. Destination folder for your final installer -->
                            <destination>${project.build.directory}/dist</destination>

                            <!-- 4. Platform-Specific Package Customizations -->
                            <!-- Windows Configuration (Active only on Windows builds) -->
                            <winDirChooser>true</winDirChooser>
                            <winShortcut>true</winShortcut>
                            <winMenu>true</winMenu>
                            <winMenuGroup>Velox</winMenuGroup>


                            <!-- Linux Configuration (Active only on Linux builds) -->
                            <linuxShortcut>true</linuxShortcut>
                            <linuxAppCategory>Office</linuxAppCategory>

                            <!-- 5. Generate the default package type for the current host OS -->
                            <!-- Windows: exe, Mac: dmg, Linux: deb -->
                            <type>${jpackage.type}</type>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version> <!-- Use the latest version -->
                <configuration>
                    <!-- Redirects the JAR to a custom folder inside the project root -->
                    <outputDirectory>${project.build.directory}/${jar.output.folder}</outputDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>